Fixed spacing issue between blocks on events page

--- a/sites/all/themes/idap/css/block-customizations.css
+++ b/sites/all/themes/idap/css/block-customizations.css
@@ -46,3 +46,7 @@
 .col-2 .summary-listing-photo .content {
 	width:241px;
 }
+
+.field-name-event-participation {
+	margin-bottom:20px;
+}
